...
          placeholder="Search games..."
          value={searchQuery}
          onChangeText={setSearchQuery}
          leftIcon={(props: any) => <SearchIcon {...props} size="xl" />}
          rightIcon={searchQuery ? CloseIcon : undefined}
          onRightIconPress={() => setSearchQuery('')}
          testID="game-list-search-input"
        />
      </Box>

      <ScrollView
        horizontal
        showsHorizontalScrollIndicator={false}
...
