...

        <Box className="bg-background-0 pb-6">
          <VStack space="xl" className="pt-4">
            <Box className="px-4">
              <RecommenderSummaryCard
                onPress={() => handleOpenRecommendations()}
                testID="social-recommender-card"
              />
            </Box>

            <SocialSectionTabs
              isLoadingFriendList={isLoadingFriendList}
              errorFriendList={!!errorFriendList}
...
