appId: com.gamelog.app
onFlowComplete:
  - runFlow:
      file: logout_flow.yaml
  - stopApp
---
- launchApp
- extendedWaitUntil:
    visible: "Sign In"
    timeout: 100000

- runFlow:
    when:
      visible: "Sign In"
    file: login_flow.yaml
    env:
      EMAIL: test-01@test.com
      PASSWORD: 12345678

- extendedWaitUntil:
    visible: "Games"
    timeout: 100000

- tapOn:
    id: "ProfileTab"

- extendedWaitUntil:
    visible:
      id: "profile-tab-overview"
    timeout: 30000

- tapOn:
    id: "profile-tab-time"
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible:
    id: "playtime-blocks-chart"

- tapOn:
    id: "profile-tab-genres"
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible:
    point: 3%,39%

- tapOn:
    id: "profile-tab-community"
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible:
    id: "profile-community-tab"

- tapOn:
    id: "profile-tab-overview"
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible:
    id: "profile-playtime-trend"